# ishop

./: .gitignore  README.md  alembic.ini  category.py  configs.py  db.sqlite3  main.py  product.py  pyproject.toml  requirements.txt  user.py
app/: configs.py  main.py
app/common/exceptions/: app_exceptions.py  error_response.py
app/common/fastapi/: depends.py  lifespan.py
app/common/http_response/: doc_reponses.py  error_models.py  error_response.py  reponses.py  success_response.py  success_result.py
app/common/pydantic/: settings.py
app/db/: base.py  database_session_manager.py  db.sqlite3  session.py
app/modules/auth/: depends.py  routers.py  schemas.py
app/modules/auth/use_cases/: create_tokens.py
app/modules/auth/usecase/: auth_user_by_email_password.py  create_tokens.py
app/modules/auth/usecases/: create_tokens.py  read_access_token.py
app/modules/category/: models.py  repository.py
app/modules/product/: models.py  repository.py  repository_interface.py  routers.py  schemas.py
app/modules/user/: depends.py  models.py  repository.py  repository_interface.py  routers.py  schemas.py
app/utils/jwt_auth/: auth_config.py  jwt_handler.py
app/utils/security/: oauth2_bearer.py  password_context.py
db/: base.py  env.py
db/versions/: fb4da9d7e91d_create_user_model.py
docs/: INDEX.md  dbconnection.md  guidelines.md
src/: configs.py  main.py
src/db/: base.py  session.py
src/modules/category/: models.py  repository.py
src/modules/product/: models.py  routers.py  schemas.py
src/modules/user/: models.py  repository.py  routers.py  schemas.py
(+7 files in other folders)
