[project]
name = "ishop"
version = "0.1.0"
description = "iShop Api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.1",
    "orjson>=3.10.18",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.9.1",
    "python-decouple>=3.8",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.40",
]


[tool.uv]
dev-dependencies = [
    "ruff==0.11.10",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio==0.23.5",
    "faker>=37.3.0",
    "pytest-order>=1.3.0",
    "playwright>=1.52.0",
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
extend-select = ["I", "Q"]

[tool.ruff.format]
quote-style = "double"
